<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBoxAwake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_awake"
                    android:checked="true"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/viewNumTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_times" />

                <EditText
                    android:id="@+id/editNumTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:inputType="number"
                    android:maxHeight="16.0sp"
                    android:text="@string/_100"
                    android:textSize="16.0sp">

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/viewTimerout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_timeout_ms" />

                <EditText
                    android:id="@+id/editTimeout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:inputType="number"
                    android:maxHeight="16.0sp"
                    android:text="@string/_1000"
                    android:textSize="16.0sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/viewSleepTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep_time_ms" />

                <EditText
                    android:id="@+id/editSleepTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:inputType="number"
                    android:maxHeight="16.0sp"
                    android:text="@string/_1000"
                    android:textSize="16.0sp" />
            </TableRow>

            <TableRow android:id="@+id/tableRow7">

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="40.0dip"
                    android:paddingRight="40.0dip"
                    android:text="@string/start" />

                <Button
                    android:id="@+id/stopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:enabled="false"
                    android:paddingLeft="40.0dip"
                    android:paddingRight="40.0dip"
                    android:text="@string/stop" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/viewCurrentCycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_count" />

                <EditText
                    android:id="@+id/editCurrentCycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="8"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:maxHeight="14.0sp"
                    android:textSize="14.0sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/viewMisread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mis_read_count"
                    android:textSize="12.0sp" />

                <EditText
                    android:id="@+id/editMisread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="8"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="number"
                    android:maxHeight="14.0sp"
                    android:textSize="14.0sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/viewTimeoutCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeout_count"
                    android:textSize="12.0sp" />

                <EditText
                    android:id="@+id/editTimeoutCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="8"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="number"
                    android:maxHeight="14.0sp"
                    android:textSize="14.0sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/viewMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_ms" />

                <EditText
                    android:id="@+id/editMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="8"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="number"
                    android:maxHeight="14.0sp"
                    android:textSize="14.0sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/viewMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_ms" />

                <EditText
                    android:id="@+id/editMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="8"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="number"
                    android:maxHeight="14.0sp"
                    android:textSize="14.0sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/viewAvg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_ms" />

                <EditText
                    android:id="@+id/editAvg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="8"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="number"
                    android:maxHeight="14.0sp"
                    android:textSize="14.0sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>